# amazhist-python

./: .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  compose.yaml  config.example.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  release.yaml  release.yml  test.yaml
app/: amazhist.py  build.py
doc/: architecture.md
lib/: crawl_handle.py  order_history.py  selenium_util.py  serializer.py  store_amazon.py  store_amazon_const.py
lib/local_lib/: config.py  openpyxl_util.py  selenium_util.py  serializer.py
lib/store_amazon/: const.py  crawler.py  handle.py  order_history.py
schema/: config.schema  sqlite.schema
src/: app.py
src/amazhist/: __init__.py  __main__.py  cli.py  config.py  const.py  crawler.py  database.py  exceptions.py  handle.py  history.py  item.py  migrate.py  order.py  order_history.py  order_list.py  parser.py  types.py
tests/: conftest.py
tests/unit/: test_app.py  test_crawler.py  test_database.py  test_handle.py  test_history.py  test_item.py  test_migrate.py  test_order.py  test_order_list.py  test_parser.py
