[project]
name = "amazhist-python"
version = "0.1.0"
description = "Amazon.co.jp の購入履歴情報を収集するスクリプトです．"
authors = [
    { name = "KIMATA Tetsuya", email = "kimata@green-rabbit.net" }
]

readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "coloredlogs>=15.0.1",
    "docopt>=0.6.2",
    "pyyaml>=6.0.1",
    "selenium>=4.18.1",
    "pyprind>=2.11.3",
    "enlighten>=1.12.4",
    "openpyxl>=3.1.2",
    "pillow>=10.2.0",
    "imageio>=2.34.0",
    "jinxed>=1.2.1",
]

[dependency-groups]
dev = [
    "nuitka>=2.1.3",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib/local_lib", "lib/store_amazon"]

[tool.pytest.ini_options]
minversion = "6.0"

addopts = "--verbose --cov=app --cov=lib --log-file-level=INFO --log-format=\"%(asctime)s %(levelname)s %(message)s\" --log-format=\"%(asctime)s %(levelname)s [%(filename)s:%(lineno)s %(funcName)s] %(message)s\" --capture=sys --cov-report=html --html=tests/evidence/index.htm --self-contained-html"

testpaths = [
    "tests",
]
filterwarnings = [
    "ignore:The hookimpl CovPlugin.pytest_configure_node uses",
    "ignore:The hookimpl CovPlugin.pytest_testnodedown uses",
    "ignore::DeprecationWarning:pytest_freezegun",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
]

[tool.coverage.html]
directory = "tests/evidence/coverage"
